--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,9 @@ base {
 
 repositories {
     maven {
+        url = "https://maven.fabricmc.net/"
+    }
+    maven {
         name = "Meteor Dev Releases"
         url = "https://maven.meteordev.org/releases"
     }
@@ -21,9 +24,9 @@ repositories {
 
 dependencies {
     // Fabric
-    minecraft "com.mojang:minecraft:${project.minecraft_version}"
-    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
-    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
+    minecraft "com.mojang:minecraft:1.21"
+    mappings "net.fabricmc:yarn:1.21+build.8:v2"
+    modImplementation "net.fabricmc:fabric-loader:0.15.11"
 
     // Meteor
     modImplementation "meteordevelopment:meteor-client:${project.meteor_version}"
@@ -32,8 +35,8 @@ dependencies {
 tasks {
     processResources {
         def propertyMap = [
-            "version"   : project.version,
-            "mc_version": project.minecraft_version,
+                "version"   : project.version,
+                "mc_version": project.minecraft_version,
         ]
 
         filesMatching("fabric.mod.json") {
