--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ loader_version=0.15.11
 # Mod Properties
 mod_version=0.1.4
 maven_group=com.example
-archives_base_name=cactus-addon
+archives_base_name=cactus-addon-1.21
 
 # Dependencies
 
